--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,13 @@ div > * {
 }
 
 div > *,
-button,input::placeholder {
+button,
+input::placeholder {
   font-family: "yekan" !important;
+}
 
+.round-shadow {
+  border-radius: 50px;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow: 5px 5px 10px #d9d9d9, -5px -5px 10px #ffffff;
 }
